# SearchEngine-CS2341

./: AVLTree.h  CMakeLists.txt  CMakeSettings.json  CountingHashSet.h  DocumentParser.cpp  DocumentParser.h  HashMap.h  HashNode.h  HashSet.h  IndexHandler.cpp  IndexHandler.h  QueryProcessor.cpp  QueryProcessor.h  README.md  Reference.h  TreeNode.h  UserInterface.cpp  UserInterface.h  main.cpp  test.cpp
.github/workflows/: build.yaml
data-small/: metadata-cs2341.csv
